# excel_check_tools_long_001

./: .gitignore  Cargo.toml  README.md  build.rs
.github/workflows/: release-msi.yml
docs/: 对公贷-.xlsx  标准 更新.xlsx  行业分类代码注释.xls
installer/: Package.wxs
src/: app.rs  checker.rs  export.rs  hierarchy.rs  icon.rs  lib.rs  main.rs  model.rs  persistence.rs  rules.rs  settings.rs
tools/: generate_app_icon.ps1
